# wielorzeczownik

./: .editorconfig  .gitignore  .prettierrc  README.md  pyproject.toml  renovate.json  requirements_dev.txt  requirements_lint.txt  requirements_prod.txt
.github/: CODEOWNERS
.github/workflows/: metrics.yml  neofetch.yml  snake.yml  validate.yml
neocard/: __main__.py  avatar.py  cli.py  colors.py  config.py  constants.py  github.py  languages.py  models.py  panel.py  svg.py  time_utils.py
