[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "neocard"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "Pillow",
  "svgwrite",
  "PyGithub",
  "python-dateutil",
  "fonttools",
  "brotli",
]

[project.scripts]
neocard = "neocard.cli:main"

[tool.setuptools]
packages = ["neocard"]

[tool.setuptools.package-data]
neocard = ["assets/*.woff2"]

[tool.ruff]
line-length = 80
target-version = "py39"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501",             # line length is enforced by the formatter
  "D",                # docstrings are not mandated
  "ANN401",           # allow explicit typing.Any where needed
  "COM812",           # conflicts with the formatter
  "ISC001",           # conflicts with the formatter
  "TRY003",           # long messages inside raise
  "EM101", "EM102",   # string literals in exceptions
  "PLR0913",          # too many arguments (builder signatures)
  "PLR2004",          # magic value comparisons
  "FBT001", "FBT002", # boolean positional args
  "T201",             # print is the CLI's user-facing output channel
  "S310",             # urllib opens a fixed https API host by design
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unreachable = true
